# api/openapi-develop.yaml
@@ -1,71 +1,147 @@
-openapi: "3.0.1"
+components:
+  schemas:
+    CreateInquiryRequest:
+      properties:
+        body:
+          type: string
+        subject:
+          type: string
+      required:
+      - subject
+      - body
+      type: object
+    CreateInquiryResponse:
+      properties:
+        inquiry:
+          $ref: '#/components/schemas/Inquiry'
+      required:
+      - inquiry
+      type: object
+    ErrorResponse:
+      properties:
+        error:
+          type: string
+        message:
+          type: string
+      required:
+      - error
+      - message
+      type: object
+    Inquiry:
+      properties:
+        body:
+          type: string
+        cognito_sub:
+          format: uuid
+          type: string
+        created_at:
+          format: date-time
+          type: string
+        email:
+          type: string
+        id:
+          format: uuid
+          type: string
+        subject:
+          type: string
+      required:
+      - id
+      - cognito_sub
+      - email
+      - subject
+      - body
+      - created_at
+      type: object
+    InquiryListResponse:
+      properties:
+        count:
+          format: int64
+          minimum: 0
+          type: integer
+        email:
+          type: string
+        inquiries:
+          items:
+            $ref: '#/components/schemas/Inquiry'
+          type: array
+      required:
+      - email
+      - count
+      - inquiries
+      type: object
+  securitySchemes:
+    CognitoAuthorizer:
+      flows: {}
+      type: oauth2
+      x-amazon-apigateway-authorizer:
+        identitySource: $request.header.Authorization
+        jwtConfiguration:
+          audience:
+          - exampleclientid
+          issuer: https://cognito-idp.ap-northeast-3.amazonaws.com/ap-northeast-3_example
+        type: jwt
 info:
-  title: "snngicf-api-develop-http-api-develop"
-  version: "1.0"
-servers:
-- url: "https://v3bc42brtj.execute-api.ap-northeast-3.amazonaws.com/{basePath}"
-  variables:
-    basePath:
-      default: ""
-tags:
-- name: "aws:cloudformation:stack-name"
-  x-amazon-apigateway-tag-value: "snngicf-api-develop"
-- name: "aws:cloudformation:logical-id"
-  x-amazon-apigateway-tag-value: "HttpApi"
-- name: "aws:cloudformation:stack-id"
-  x-amazon-apigateway-tag-value: "arn:aws:cloudformation:ap-northeast-3:672530906129:stack/snngicf-api-develop/1190e090-4db6-11f1-95c6-06b1941746d7"
-- name: "httpapi:createdBy"
-  x-amazon-apigateway-tag-value: "SAM"
+  description: ''
+  license:
+    name: ''
+  title: api_handler
+  version: 0.1.0
+openapi: 3.1.0
 paths:
   /inquiries:
     get:
+      operationId: get_inquiries
       responses:
-        default:
-          description: "Default response for GET /inquiries"
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InquiryListResponse'
+          description: Get inquiries
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Unauthorized
+        '500':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Internal server error
       security:
       - CognitoAuthorizer: []
-      x-amazon-apigateway-integration:
-        payloadFormatVersion: "2.0"
-        type: "aws_proxy"
-        httpMethod: "POST"
-        uri: "arn:aws:apigateway:ap-northeast-3:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-northeast-3:672530906129:function:snngicf-api-develop-InquiryDbFunction-TlZr2R1C1Avg/invocations"
-        connectionType: "INTERNET"
+      tags: []
     post:
+      operationId: post_inquiry
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateInquiryRequest'
+        required: true
       responses:
-        default:
-          description: "Default response for POST /inquiries"
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateInquiryResponse'
+          description: Create inquiry
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Unauthorized
+        '500':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Internal server error
       security:
       - CognitoAuthorizer: []
-      x-amazon-apigateway-integration:
-        payloadFormatVersion: "2.0"
-        type: "aws_proxy"
-        httpMethod: "POST"
-        uri: "arn:aws:apigateway:ap-northeast-3:lambda:path/2015-03-31/functions/arn:aws:lambda:ap-northeast-3:672530906129:function:snngicf-api-develop-InquiryDbFunction-TlZr2R1C1Avg/invocations"
-        connectionType: "INTERNET"
-components:
-  securitySchemes:
-    CognitoAuthorizer:
-      type: "oauth2"
-      flows: {}
-      x-amazon-apigateway-authorizer:
-        identitySource: "$request.header.Authorization"
-        jwtConfiguration:
-          audience:
-          - "10e3ku62o0cm6n1gt2h65s1u9t"
-          issuer: "https://cognito-idp.ap-northeast-3.amazonaws.com/ap-northeast-3_kZfu7imK2"
-        type: "jwt"
-x-amazon-apigateway-cors:
-  allowMethods:
-  - "DELETE"
-  - "GET"
-  - "OPTIONS"
-  - "POST"
-  - "PUT"
-  allowHeaders:
-  - "authorization"
-  - "content-type"
-  maxAge: -42
-  allowCredentials: false
-  allowOrigins:
-  - "https://ngicf-testpage.pages.dev"
-x-amazon-apigateway-importexport-version: "1.0"
+      tags: []
+servers:
+- url: https://example.execute-api.ap-northeast-3.amazonaws.com
